<resources>
    <string name="app_name">RecycleView</string>
    <string name="heroes_name">Nama Pahlawan</string>
    <string name="detail">Detail</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="with_card_view">with Card View</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="picture">Gambar Pahlawan</string>
</resources>