<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:id="@+id/imgHero"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            tools:src="@color/teal_700"
            android:contentDescription="@string/picture" />
        <TextView
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/imgHero"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/heroes_name" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textDetail"
            android:layout_above="@id/layoutButton"
            android:layout_below="@id/textName"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/imgHero"
            android:ellipsize="end"
            android:maxLines="5"
            tools:text="@string/detail"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutButton"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/imgHero"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnSetFav"
                android:layout_weight="1"
                android:text="@string/favorite"
                android:textSize="12sp"
                style="@style/Widget.AppCompat.Button.Colored"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnSetShare"
                android:layout_weight="1"
                android:text="@string/share"
                android:textSize="12sp"
                style="@style/Widget.AppCompat.Button.Colored"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>